--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/17/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">61.2&#176;F</td>
+        <td class="data">61.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">61.2&#176;F</td>
+        <td class="data">61.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">61.2&#176;F</td>
+        <td class="data">61.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.5&#176;F</td>
+        <td class="data">48.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">63%</td>
+        <td class="data">64%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.966 inHg (0.017)</td>
+        <td class="data">29.961 inHg (0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">39%</td>
       </tr>
     </tbody>
   </table>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:45:36 AM</td>
+          <td class="data">06:46:21 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:10:17 PM</td>
+          <td class="data">07:08:49 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:42:47 PM">
-            96.4</span><br/>
-          <span title="06:54:23 AM">
-            46.1</span>
+          <span title="12:00:05 AM">
+            61.2</span><br/>
+          <span title="12:03:48 AM">
+            61.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:42:47 PM" class="hival">
-            96.4</span>
+          <span title="12:00:05 AM" class="hival">
+            61.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:54:23 AM" class="loval">
-            46.1</span>
+          <span title="12:03:48 AM" class="loval">
+            61.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="08:48:40 PM">
-            55.1</span><br/>
-          <span title="04:50:46 PM">
-            21.8</span>
+          <span title="12:00:05 AM">
+            48.9</span><br/>
+          <span title="12:00:54 AM">
+            48.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:48:40 PM (Wednesday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:12:57 AM">
-            81</span><br/>
-          <span title="03:41:12 PM">
-            8</span>
+          <span title="12:00:04 AM">
+            64</span><br/>
+          <span title="12:00:52 AM">
+            63</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:42:01 AM">
-            30.047</span><br/>
-          <span title="06:26:02 PM">
-            29.894</span>
+          <span title="12:00:04 AM">
+            29.963</span><br/>
+          <span title="12:03:00 AM">
+            29.961</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="03:38:16 PM">
-            19</span><br/>
-          174
+          <span title="12:00:04 AM">
+            1</span><br/>
+          204
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          0</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          4</td>
+          0</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
-          194
+          0<br/>
+          202
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:12:02 PM">
-            81.6</span><br/>
-          <span title="07:15:01 AM">
-            72.5</span>
+          <span title="12:02:00 AM">
+            75.5</span><br/>
+          <span title="12:00:04 AM">
+            75.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:32:02 PM (Tuesday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="11:05:02 PM">
+          <span title="12:01:00 AM">
             39</span><br/>
-          <span title="05:44:02 PM">
-            26</span>
+          <span title="12:00:04 AM">
+            38</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 9 hours, 12 minutes</td>
+      <td class="data">15 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 9 hours, 12 minutes</td>
+      <td class="data">15 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
