--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/17/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">96.4<br/>
-            <span class="timestamp">02:42:47 PM</span><br/>
-            46.1<br/>
-            <span class="timestamp">06:54:23 AM</span>
+          <td class="data new_row">61.2<br/>
+            <span class="timestamp">12:00:05 AM</span><br/>
+            61.0<br/>
+            <span class="timestamp">12:03:48 AM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">96.4<br/>
-            <span class="timestamp">02:42:47 PM</span>
+          <td class="data new_row">61.2<br/>
+            <span class="timestamp">12:00:05 AM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">46.1<br/>
-            <span class="timestamp">06:54:23 AM</span>
+          <td class="data new_row">61.0<br/>
+            <span class="timestamp">12:03:48 AM</span>
           </td>
           <td class="data new_row">46.1<br/>
             <span class="timestamp">06:54:23 AM (Wednesday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">55.1<br/>
-            <span class="timestamp">08:48:40 PM</span><br/>
-            21.8<br/>
-            <span class="timestamp">04:50:46 PM</span>
+          <td class="data new_row">48.9<br/>
+            <span class="timestamp">12:00:05 AM</span><br/>
+            48.4<br/>
+            <span class="timestamp">12:00:54 AM</span>
           </td>
           <td class="data new_row">55.1<br/>
             <span class="timestamp">08:48:40 PM (Wednesday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">81<br/>
-            <span class="timestamp">07:12:57 AM</span><br/>
-            8<br/>
-            <span class="timestamp">03:41:12 PM</span>
+          <td class="data new_row">64<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            63<br/>
+            <span class="timestamp">12:00:52 AM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">30.047<br/>
-            <span class="timestamp">09:42:01 AM</span><br/>
-            29.894<br/>
-            <span class="timestamp">06:26:02 PM</span>
+          <td class="data new_row">29.963<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            29.961<br/>
+            <span class="timestamp">12:03:00 AM</span>
           </td>
           <td class="data new_row">30.054<br/>
             <span class="timestamp">10:03:01 AM (Tuesday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            19<br/>
-            174<br/>
-            <span class="timestamp">03:38:16 PM</span>
+            1<br/>
+            204<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            2</td>
+            0</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">4</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">4</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            1<br/>
-            194
+            0<br/>
+            202
           </td>
           <td class="data new_row">
             2<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            81.6<br/>
-            <span class="timestamp">06:12:02 PM</span><br/>
-            72.5<br/>
-            <span class="timestamp">07:15:01 AM</span>
+            75.5<br/>
+            <span class="timestamp">12:02:00 AM</span><br/>
+            75.4<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
             82.0<br/>
@@ -397,9 +397,9 @@
           <td class="units">%</td>
           <td class="data new_row">
             39<br/>
-            <span class="timestamp">11:05:02 PM</span><br/>
-            26<br/>
-            <span class="timestamp">05:44:02 PM</span>
+            <span class="timestamp">12:01:00 AM</span><br/>
+            38<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
             41<br/>
