--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 12:49:00 AM</p>
+    <p class="lastupdate">09/17/2020 12:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.4&#176;F</td>
+        <td class="data">59.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.4&#176;F</td>
+        <td class="data">59.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.4&#176;F</td>
+        <td class="data">59.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.2&#176;F</td>
+        <td class="data">46.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.951 inHg (-0.007)</td>
+        <td class="data">29.949 inHg (-0.009)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.4&#176;F</td>
+        <td class="data">74.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:05 AM">
             61.2</span><br/>
-          <span title="12:48:24 AM">
-            59.4</span>
+          <span title="12:53:52 AM">
+            59.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:48:24 AM" class="loval">
-            59.4</span>
+          <span title="12:53:52 AM" class="loval">
+            59.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:25:38 AM">
             49.3</span><br/>
-          <span title="12:06:32 AM">
-            46.9</span>
+          <span title="12:53:52 AM">
+            46.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:48:40 PM (Wednesday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:07:00 AM">
             29.965</span><br/>
-          <span title="12:39:00 AM">
-            29.949</span>
+          <span title="12:51:00 AM">
+            29.948</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:07:00 AM">
             75.6</span><br/>
-          <span title="12:38:00 AM">
-            74.3</span>
+          <span title="12:53:00 AM">
+            74.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:32:02 PM (Tuesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 10 hours, 2 minutes</td>
+      <td class="data">15 days, 10 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 10 hours, 2 minutes</td>
+      <td class="data">15 days, 10 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
